@@ -1,24 +1,27 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.query.parser.sparql;
 
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.eclipse.rdf4j.model.vocabulary.FOAF;
 import org.eclipse.rdf4j.query.MalformedQueryException;
 import org.eclipse.rdf4j.query.QueryLanguage;
 import org.eclipse.rdf4j.query.Update;
 import org.eclipse.rdf4j.repository.Repository;
-import org.eclipse.rdf4j.repository.RepositoryConnection;
 import org.eclipse.rdf4j.repository.http.HTTPRepository;
+import org.eclipse.rdf4j.testsuite.query.parser.sparql.SPARQLUpdateTest;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
 import org.junit.Ignore;
@@ -31,11 +34,11 @@ public class HTTPSparqlUpdateTest extends SPARQLUpdateTest {
 
 	private static SPARQLEmbeddedServer server;
 
-	private static String repositoryId = "test-sparql";
+	private static final String repositoryId = "test-sparql";
 
 	@BeforeClass
 	public static void startServer() throws Exception {
-		server = new SPARQLEmbeddedServer(Arrays.asList(repositoryId));
+		server = new SPARQLEmbeddedServer(List.of(repositoryId));
 		try {
 			server.start();
 		} catch (Exception e) {
