@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2015 Eclipse RDF4J contributors, Aduna, and others.
+ *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Distribution License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
  *******************************************************************************/
 package org.eclipse.rdf4j.query.resultio.text.tsv;
 
@@ -12,7 +15,6 @@ import static org.junit.Assert.assertEquals;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 import java.util.List;
 
 import org.eclipse.rdf4j.model.impl.SimpleValueFactory;
@@ -45,9 +47,9 @@ public class SPARQLTSVCustomTest {
 	@Ignore("This test does not work with RDF-1.1")
 	@Test
 	public void testSES2126QuotedLiteralIntegerAsStringExplicitType() throws Exception {
-		List<String> bindingNames = Arrays.asList("test");
+		List<String> bindingNames = List.of("test");
 		TupleQueryResult tqr = new IteratingTupleQueryResult(bindingNames,
-				Arrays.asList(new ListBindingSet(bindingNames,
+				List.of(new ListBindingSet(bindingNames,
 						SimpleValueFactory.getInstance().createLiteral("1", XSD.STRING))));
 		String result = writeTupleResult(tqr);
 		assertEquals("?test\n\"1\"^^<http://www.w3.org/2001/XMLSchema#string>\n", result);
@@ -60,9 +62,9 @@ public class SPARQLTSVCustomTest {
 	 */
 	@Test
 	public void testSES2126QuotedLiteralIntegerAsStringImplicitType() throws Exception {
-		List<String> bindingNames = Arrays.asList("test");
+		List<String> bindingNames = List.of("test");
 		TupleQueryResult tqr = new IteratingTupleQueryResult(bindingNames,
-				Arrays.asList(new ListBindingSet(bindingNames, SimpleValueFactory.getInstance().createLiteral("1"))));
+				List.of(new ListBindingSet(bindingNames, SimpleValueFactory.getInstance().createLiteral("1"))));
 		String result = writeTupleResult(tqr);
 		assertEquals("?test\n\"1\"\n", result);
 	}
